# universal-extractor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: new_extractor.md
.github/workflows/: ci.yml  release.yml
src/universal_extractor/: __init__.py  __main__.py  cli.py  config.py
src/universal_extractor/core/: __init__.py  base.py  registry.py  router.py
src/universal_extractor/extractors/: __init__.py  docx.py  pdf.py  plaintext.py  pptx.py  video.py  webpage.py  xlsx.py  youtube.py
src/universal_extractor/output/: __init__.py  report.py  writer.py
src/universal_extractor/utils/: __init__.py  browser.py  io.py  logging.py  sanitize.py
tests/: conftest.py
tests/fixtures/: sample.md  sample.txt
tests/integration/: test_cli.py
tests/unit/: test_config.py  test_pipe.py  test_registry.py  test_router.py  test_writer.py
tests/unit/extractors/: test_docx.py  test_pdf.py  test_plaintext.py  test_pptx.py  test_video.py  test_webpage.py  test_xlsx.py  test_youtube.py
